Add currency api
